tests/baselines/reference/override3.errors.txt
tests/cases/conformance/override/override3.ts(7,5): error TS4113: Method must have override modifier because it's override the base class 'B'.


==== tests/cases/conformance/override/override3.ts (1 errors) ====
    declare class B {
        foo(): void
        bar(): void
    }
    
    declare class D extends B {
        foo (): void;
        ~~~
!!! error TS4113: Method must have override modifier because it's override the base class 'B'.
        override bar (): void;
    }
    
    class DB extends B {
        override foo(): void {}
        override bar(): void {}
    }
    
    class DD extends D {
        override foo(): void {}
        override bar(): void {}
    }
    